<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="com.example.registrarse.Registrarse"
    android:background="@drawable/cristhell">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:textColor="@color/bebeciStaa"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ovalo"
                android:hint="Nombres"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ovalo"
                android:ems="10"
                android:textColor="@color/bebeciStaa"
                android:hint="Apellidos"
                android:inputType="textPersonName"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:padding="10dp" />


            <EditText
                android:id="@+id/editTextEdad"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:layout_marginBottom="20dp"
                android:textColor="@color/bebeciStaa"
                android:background="@drawable/ovalo"
                android:hint="Edad"
                android:padding="10dp"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/textInputPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:textColor="@color/bebeciStaa"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ovalo"
                android:hint="Numero de Celular (Opcional)"
                android:padding="10dp"
                android:textSize="18dp"
                android:inputType="numberSigned"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:layout_marginRight="30dp"
                android:textColor="@color/bebeciStaa"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ovalo"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/bebeciStaa"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:background="@drawable/ovalo"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/contraseñaConfirmacion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/ovalo"
                android:ems="10"
                android:textColor="@color/bebeciStaa"
                android:textStyle="italic"
                android:textColorHint="@color/realgrisaceo"
                android:hint="@string/passworda"
                android:inputType="textPassword"
                android:padding="10dp" />


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/boton_redondo"
                android:clickable="true"
                android:text="@string/btn_registrar"
                app:backgroundTint="@color/cristhel" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
